<?xml version="1.0"?>
<package format="2">
  <name>orb_slam3_core</name>
  <version>1.0.0</version>
  <description>ORB-SLAM3: An Accurate Open-Source Library for Visual, Visual-Inertial and Multi-Map SLAM</description>

  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>

  <license>GPL-3.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
</package>
